    --leak-check=full.  Previously they could differ because
    --leak-check=summary counted "indirectly lost" blocks and "suppressed"
    blocks as "definitely lost".
  - Blocks that are only reachable via at least one interior-pointer, but
    are directly pointed to by a start-pointer, were previously marked as
    "still reachable".  They are now correctly marked as "possibly lost".

* The format of some (non-XML) stack trace entries has changed a little.
  Previously there were six possible forms:

    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really
    0x80483BF: (within /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  The third and fourth of these forms have been made more consistent with
  the others.  The six possible forms are now:
  
    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really (in ???)
    0x80483BF: ??? (in /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  Stack traces produced when --xml=yes is specified are different and
  unchanged.

* XXX: XML output has changed...

* The graphs drawn by Massif's ms_print program have changed slightly:
  - The half-height chars '.' and ',' are no longer drawn, because they are
    confusing.  The --y option can be used if the default y-resolution is
    not high enough.
  - Horizontal lines are now drawn after the top of a snapshot if there is a
    gap until the next snapshot.  This makes it clear that the memory
    usage has not dropped to zero between snapshots.

* exp-Omega, an experimental instantaneous leak-detecting tool, was disabled
  in 3.4.0 due to a lack of interest and maintenance, although the source
  code was still in the distribution.  The source code has now been removed
  from the distribution.  For anyone interested, the removal occurred in SVN
  revision r10247.

* Some changes have been made to the build system.
